Add Breakfast.html , style and trying to upload the image

--- a/view_menu/templates/menu/base.html
+++ b/view_menu/templates/menu/base.html
@@ -25,6 +25,9 @@
             <a class="nav-link" href="{% url 'view_menu:menu' %}">ViewMenu</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="{% url 'view_menu:breakfast' %}">BreakFast</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="#">Book Now</a>
         </li>
         <li class="nav-item">
