--- a/view_menu/static/menu/css/style.css
+++ b/view_menu/static/menu/css/style.css
@@ -13,6 +13,9 @@
     background-position:  center center;
     background-repeat: no-repeat;
     z-index: -1;
+}
 
-   
+.title {
+    margin: 50px;
+    text-align: center;
 }
