Add Html template for lunch,side, dinner, and configure the views,Url

--- a/view_menu/templates/menu/base.html
+++ b/view_menu/templates/menu/base.html
@@ -28,6 +28,15 @@
             <a class="nav-link" href="{% url 'view_menu:breakfast' %}">BreakFast</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="{% url 'view_menu:lunch' %}">Lunch</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'view_menu:dinner' %}">Dinner</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'view_menu:side' %}">Sides</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="#">Book Now</a>
         </li>
         <li class="nav-item">
