--- a/view_menu/templates/menu/side.html
+++ b/view_menu/templates/menu/side.html
@@ -1,27 +1,27 @@
 {% extends 'menu/base.html' %}
 
-{% block title %}Lunch{% endblock %}
+{% block title %}Side{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
     <div class="row text-center">
         <div class="col-md-8">
-            <h2 class="title">Our Menu for Lunch</h2>
+            <h2 class="title">Check our Sides</h2>
             <div class="row">
-                {% for lunch in lunchs %}
+                {% for side in sides %}
                 <div class="col-md-4 p-4 justify-content-center">
-                    <img class="img" src="{{ lunch.fimage }}" alt="{{ lunch.name }}">
-                    <h4 class="pt-3">{{ lunch.name }}</h4>
+                    <img class="img" src="{{side.fimage}}" alt="{{ side.name }}">
+                    <h4 class="pt-3">{{ side.name }}</h4>
                     <div class="form-check-inline">
                         <label class="form-check-label">
                             <input class="form-check-input" type="radio" checked>
-                            {{ lunch.priceM }} $
+                            {{ side.priceM }} $
                         </label>
                     </div>
                     <div class="form-check-inline">
                         <label class="form-check-label">
                             <input class="form-check-input" type="radio">
-                            {{ lunch.priceL }} $
+                            {{ side.priceL }} $
                         </label>
                     </div>
                     <div>
@@ -35,4 +35,3 @@
     </div>
 </div>
 {% endblock %}
-
