--- a/view_menu/static/menu/css/style.css
+++ b/view_menu/static/menu/css/style.css
@@ -21,13 +21,74 @@
 }
 
 .img {
-    width: 300px;
+    width: 50px;
     border-radius: 50%;
-    height: 200px;
+    height: 50px;
 }
 
 .item-title{
     position: relative;
     margin-top: 10px;
     left: 120px;
+}
+
+
+
+.break {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    background-image: url(../css/images/breakfbg.jpg);
+    background-size: cover;
+    background-position:  center center;
+    background-repeat: no-repeat;
+    z-index: -1;
+
+
+}
+
+@keyframes fade-in {
+    
+    0% { 
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+
+.fade-in {
+    animation: fade-in 0.5s ease-in-out;
+}
+
+.card {
+    transition: transform 0.3s;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+
+.lunch{
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    background-image: url(../css/images/backg.jpg);
+    background-size: cover;
+    background-position:  center center;
+    background-repeat: no-repeat;
+    z-index: -1;
+
+}
+
+.order{
+    position: relative;
+    top: -30%
 }
