--- a/view_menu/templates/menu/breakfast.html
+++ b/view_menu/templates/menu/breakfast.html
@@ -1,40 +1,45 @@
 {% extends 'menu/base.html' %}
 
-{% block title %}Breakfasts{% endblock %}
+{% block title %}Breakfast{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
-    <div class="row text-center">
+<div class="break_fast">
+    
+    <div class="break"></div>
+
+</div>
+
+    <div class="row justify-content-center mt-5 text-center">
         <div class="col-md-8">
             <h2 class="title">Our Menu for Breakfast</h2>
             <div class="row">
                 {% for breakfast in breakfasts %}
-                <div class="col-md-4 p-4 justify-content-center">
-                    <!-- Added "p-4" class inside div -->
-                    <img class="img" src="{{ breakfast.fimage }}" alt="{{ breakfast.name }}">
-                    <!-- Corrected "image" tag to "img" and added alt attribute -->
-                    <h4 class="pt-3">{{ breakfast.name }}</h4>
-                    <div class="form-check-inline">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="radio" checked>
-                            {{ breakfast.priceM }} $
-                        </label>
-                    </div>
-                    <div class="form-check-inline">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="radio">
-                            {{ breakfast.priceL }} $
-                            <!-- "priceM"  -->
-                        </label>
-                    </div>
-                    <div>
-                        <button class="btn-warning mt-3">Add to Cart</button> 
+                <div class="col-md-6">
+                    <div class="card mb-4">
+                        <img class="card-img-top fade-in" src="{{ breakfast.fimage }}" alt="{{ breakfast.name }}"  style="width:250px; height: auto;">
+                        <div class="card-body fade-in" style="width: 400px; height: auto;" >
+                            <h4 class="card-title" id="break{{breakfast.id}}" >{{ breakfast.name }}</h4>
+                            <p class="card-text">{{ breakfast.description }}</p>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio"  name ="breakfast{{breakfast.id}}" value="{{breakfast.priceM}}" {{breakfast.priceM}} >
+                                <label class="form-check-label">{{ breakfast.priceM }} $</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio">
+                                <label class="form-check-label">{{ breakfast.priceL }} $</label>
+                            </div>
+                            <button class="btn btn-warning mt-3">Add to Cart</button>
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
             </div>
         </div>
-        <div class="col-md-4"></div>
+        <div class="col-ml-4 order">
+            <h2 class="text-center">order list</h2>
+            <ul></ul>
+            <h4>Total 0 $</h4>
+        </div>
     </div>
 </div>
 {% endblock %}
