--- a/view_menu/templates/menu/side.html
+++ b/view_menu/templates/menu/side.html
@@ -3,35 +3,38 @@
 {% block title %}Side{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
-    <div class="row text-center">
+<div class="break_fast">
+    
+    <div class="break"></div>
+
+</div>
+
+    <div class="row justify-content-center mt-5">
         <div class="col-md-8">
             <h2 class="title">Check our Sides</h2>
             <div class="row">
                 {% for side in sides %}
-                <div class="col-md-4 p-4 justify-content-center">
-                    <img class="img" src="{{side.fimage}}" alt="{{ side.name }}">
-                    <h4 class="pt-3">{{ side.name }}</h4>
-                    <div class="form-check-inline">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="radio" checked>
-                            {{ side.priceM }} $
-                        </label>
-                    </div>
-                    <div class="form-check-inline">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="radio">
-                            {{ side.priceL }} $
-                        </label>
-                    </div>
-                    <div>
-                        <button class="btn btn-warning mt-3">Add to Cart</button>
+                <div class="col-md-6">
+                    <div class="card mb-4">
+                        <img class="card-img-top fade-in" src="{{ side.fimage }}" alt="{{ side.name }}"  style="width:250px; height: auto;">
+                        <div class="card-body fade-in" style="width: 400px; height: auto;" >
+                            <h4 class="card-title" >{{ side.name }}</h4>
+                            <p class="card-text">{{ side.description }}</p>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" checked>
+                                <label class="form-check-label">{{ side.priceM }} $</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio">
+                                <label class="form-check-label">{{ side.priceL }} $</label>
+                            </div>
+                            <button class="btn btn-warning mt-3">Add to Cart</button>
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
             </div>
         </div>
-        <div class="col-md-4"></div>
     </div>
 </div>
 {% endblock %}
