--- a/view_menu/templates/menu/base.html
+++ b/view_menu/templates/menu/base.html
@@ -35,6 +35,7 @@
                         <a class="dropdown-item" href="{% url 'view_menu:lunch' %}">Lunch</a>
                         <a class="dropdown-item" href="{% url 'view_menu:dinner' %}">Dinner</a>
                         <a class="dropdown-item" href="{% url 'view_menu:side' %}">Side</a>
+                        <a class="dropdown-item" href="{% url 'view_menu:create_menu' %}">create_menu</a>
                     </div>
                 </li>
                 <li class="nav-item">
