--- a/view_menu/templates/menu/base.html
+++ b/view_menu/templates/menu/base.html
@@ -39,7 +39,8 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Book Now</a>
+                    <a class="nav-link" href="{% url 'booking:create_booking' %}">Book Now</a>
+
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Event</a>
