--- a/view_menu/templates/menu/base.html
+++ b/view_menu/templates/menu/base.html
@@ -38,10 +38,17 @@
                         <a class="dropdown-item" href="{% url 'view_menu:create_menu' %}">create_menu</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'booking:create_booking' %}">Book Now</a>
-
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Booking</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'booking:BookingList' %}">View Bookings</a>
+                        <a class="dropdown-item" href="{% url 'booking:CreateTableList' %}">Make Table Reservation</a>
+                        <a class="dropdown-item" href="{% url 'booking:ManageBookingList' %}">Manage Your Booking</a>
+                        
+                    </div>
                 </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" href="#">Event</a>
                 </li>
