--- a/booking/templates/booking/booking_list.html
+++ b/booking/templates/booking/booking_list.html
@@ -1,14 +1,29 @@
-{% extends 'base.html' %}
 
-{% block content %}
-  <h2>Booking List</h2>
-  {% if bookings %}
-    <ul>
-      {% for booking in bookings %}
-        <li>{{ booking.customer_name }} - {{ booking.reservation_date }}</li>
-      {% endfor %}
-    </ul>
-  {% else %}
-    <p>No bookings found.</p>
-  {% endif %}
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>booking t</title>
+</head>
+<body>
+  {% for booking in booking_list %}
+   <h2>{{booking_list}}</h2>
+   {% endfor%}
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
