--- a/booking/templates/home_detail.html
+++ b/booking/templates/home_detail.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/692189991f.js" crossorigin="anonymous"></script>
 
     <!-- Main StyleSheet -->
-    <link rel="stylesheet" href="{% static 'menu/css/detail.css' %}">
+    <link rel="stylesheet" href="{% static '/css/table_detail.css' %}">
 
 </head>
 
@@ -18,24 +18,17 @@
     <!-- Main Content -->
     <div class="content">
 
-        <!-- Room Image -->
-        <div class="image">
-            <img
-                src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
-        </div>
-
         <!-- Room Details -->
-        <div class="room">
+        <div class="table">
 
             <!-- Div 1: Back to Home -->
             <div class="home">
-                
-                <a href="{% url 'booking:TableList'%}"><i class="fas fa-arrow-alt-circle-left">Home</i></a>
+                <a href="{% url 'booking:TableListView' %}"><i class="fas fa-arrow-alt-circle-left"></i> Home</a>
             </div>
+            
 
-            <!-- Div 2: Room Information -->
-            <div class="room-info">
-                <!--<h1>{{table_capacity}}</h1>-->
+            <!-- Div 2: Tablenformation -->
+            <div class="table-info">
                 <h1>{{table_capacity}}</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id optio rem saepe culpa architecto tempora
                     numquam debitis reiciendis! Quaerat laudantium consequuntur doloribus quod placeat consectetur
@@ -44,27 +37,25 @@
             </div>
 
             <!-- Div 3: Table Booking Form -->
-            <!-- Div 3: Table Booking Form -->
-<form id="booking-form" action="" method="POST">
-    {% csrf_token %}
+            <form id="booking-form" action="" method="POST">
+                {% csrf_token %}
 
-    <!-- Input Div -->
-    <div class="input-div">
-        <label for="id_reservation_date">Reservation Date:</label>
-        {{ form.reservation_date }}
-    </div>
+                <!-- Input Div -->
+                <div class="input-div">
+                    <label for="id_reservation_date">Reservation Date:</label>
+                    {{ form.reservation_date }}
+                </div>
 
-    <div class="input-div">
-        <label for="id_reservation_date">Reservation Time:</label>
-        {{ form.reservation_time }}
-    </div>
+                <div class="input-div">
+                    <label for="id_reservation_date">Reservation Time:</label>
+                    {{ form.reservation_time }}
+                </div>
 
-    <!-- Input Div -->
-    <div class="input-div">
-        <button type="submit">Book the Table</button>
-    </div>
-</form>
-
+                <!-- Input Div -->
+                <div class="input-div">
+                    <button type="submit">Book the Table</button>
+                </div>
+            </form>
 
         </div> <!-- END Room Div -->
 
