--- a/booking/templates/table_list.html
+++ b/booking/templates/table_list.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Afrik Kitchen</title>
   <!-- Main StyleSheet -->
-  <link rel="stylesheet" href="{% static 'menu/css/home.css' %}" />
+  <link rel="stylesheet" href="{% static '/css/table_list.css' %}" />
 
 </head>
 
@@ -28,19 +28,21 @@
 
     <!-- Landing -->
     <div class="landing">
-      <h1>Luxury <span>Re-Defined</span></h1>
-      <img src="../static/menu/images/abtus.jpg" id="landing-img" alt="Best Kitchen in the World" srcset="" />
+      <h1> <span>Welcome to Afrik Kitchen</span></h1>
+      <img src="https://www.pexels.com/photo/crop-man-demonstrating-plate-of-appetizing-grilled-sandwich-in-restaurant-5490920/" id="landing-img" alt="Best Kitchen in the World"  />
     </div>
 
     <h2>Tables</h2>
     <!-- Main Content -->
     <div id="content">
       {% for table_capacity, table_url in table_list %}
-      <div class="room">
+      <div class="table">
         <a href="{{table_url}}">
+          
           <img
             src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" />
-          <h2>{{table_capacity}} Table capacity</h2>
+          
+            <h2>{{table_capacity}} Table capacity</h2>
 
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
@@ -49,7 +51,7 @@
       </div>
       {% endfor %}
     </div>
-    <script src="{% static 'menu/js/nav.js' %}"></script>
+    <script src=""></script>
 </body>
 
 </html>
