--- a/static/css/table_detail.css
+++ b/static/css/table_detail.css
@@ -26,7 +26,7 @@ body{
     flex: 0.3;
 }
 
-.room{
+.table{
     flex:0.5;
     margin: 2rem;
     display:flex;
@@ -40,7 +40,7 @@ body{
 .home{
     flex: 0.2;
 }
-.room-info{
+.table-info{
     flex: 0.4;
     margin: 5rem 1rem;
     
