--- a/static/css/table_list.css
+++ b/static/css/table_list.css
@@ -28,8 +28,8 @@ body{
     justify-content: space-evenly;
 }
 
-/* Room Divs */
-.room{
+/* table Divs */
+.table{
     max-width:20%;
     min-width: 200px;
     text-align: center;
@@ -40,11 +40,11 @@ body{
     flex: 1;
 }
 
-.room:hover{
+.table:hover{
     background-color: #353535;
 }
 
-/* Inside Room Divs */
+/* for table Divs */
 h2{
     margin: 0.25rem;
 }
