--- a/view_menu/templates/menu/base.html
+++ b/view_menu/templates/menu/base.html
@@ -63,24 +63,9 @@
     <div>
         {% block content %}
         <!-- Add the content here -->
-        <!-- ======= Hero Section ======= -->
+        <!-- ======= Hero Section ======= --
   <section id="hero" class="hero d-flex align-items-center section-bg">
-    <div class="container">
-      <div class="row justify-content-between gy-5">
-        <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
-          <h2 data-aos="fade-up">Enjoy Your Healthy<br>Delicious Food</h2>
-          <p data-aos="fade-up" data-aos-delay="100">Sed autem laudantium dolores. Voluptatem itaque ea consequatur eveniet. Eum quas beatae cumque eum quaerat.</p>
-          <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#book-a-table" class="btn-book-a-table">Book a Table</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
-          </div>
-        </div>
-        <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
-          <img src="{% static 'menu/css/images/abtus.jpg' %}" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300">
-        </div>
-      </div>
-    </div>
-  </section><!-- End Hero Section -->
+    
 
   <main id="main">
         {% endblock %}
@@ -91,7 +76,7 @@
         <!-- Add the container content here -->
     </div>
 
-    <!-- Table Details -->
+    <!-- Table Details --
     <div class="table-info">
         <p>The information about the restaurant (Afrik Kitchen)</p>
     </div>
@@ -102,13 +87,13 @@
         <!-- Can also include the option to download the menu -->
     </div>
 
-    <!-- Booking Form -->
+    <!-- Booking Form --
     <div id="booking-form">
         <p>The information about the booking</p>
         <!-- Place your booking form code here -->
     </div>
 
-    <!-- Footer -->
+    <!-- Footer --
     <footer class="mt-5">
         <div class="container">
             <div class="row">
