--- a/booking/templates/booking/managebookings.html
+++ b/booking/templates/booking/managebookings.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h2>Create a Booking</h2>
-  <form method="POST" action="{% url booking:'create_booking' %}">
+  <form method="POST" action="{% url 'booking:managebookings' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Create Booking</button>
