--- a/static/css/style.css
+++ b/static/css/style.css
@@ -257,6 +257,74 @@ td a {
   .event-card p {
     font-size: 16px;
   }
+
+  /* contact form*/
+
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  label {
+    display: block;
+    font-weight: bold;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  input[type="submit"] {
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #45a049;
+  }
+  
+  
+
+  
+
+
+  /* contact form end*/
+
+
+  
+  /* the Event form*
+
+  .container {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  .form-label {
+    font-weight: bold;
+  }
+  
+  .form-control {
+    margin-bottom: 10px;
+  }
+  
+  .btn-primary {
+    display: block;
+    width: 100%;
+  }
+  
+  .alert {
+    margin-top: 20px;
+  }
   
 
 /* Footer Section */
