Modifiying the Template for booking and home and their css

--- a/TEMPLATES_DIR/includes/nav.html
+++ b/TEMPLATES_DIR/includes/nav.html
@@ -32,7 +32,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" aria-current="page" href="{% url 'booking:managebookings' %}">Manage Bookings</a></li>
-                                <li><a class="dropdown-item" aria-current="page" href="{% url 'booking:create_booking' %}">New Booking</a></li>                       
+                                <li><a class="dropdown-item" aria-current="page" href="{% url 'booking:TableListView' %}">New Booking</a></li>                       
                             </ul>
                         </li>
                         <!-- Show menu drop downs to staff -->
