--- a/static/css/table_detail.css
+++ b/static/css/table_detail.css
@@ -7,13 +7,13 @@
 }
 body{
     background-color: rgb(46, 47, 48);
-    color: rgb(236, 235, 228);
+    color: rgb(14, 153, 60);
     font-family: sans-serif;
     line-height: 1.25;
     height: 100vh;
 }
 
-/* Main Divs */
+/* Main Divs 
 .content {
     display: flex;
     flex-direction: row;
@@ -21,7 +21,7 @@ body{
     width:100%;
     justify-content: left;
 }
-
+*/
 .image{
     flex: 0.3;
 }
@@ -35,7 +35,7 @@ body{
     flex-direction: column;
 }
 
-/* Sub Divs */
+/* Sub Divs *
 
 .home{
     flex: 0.2;
@@ -60,9 +60,14 @@ form{
 }
 
 i{
-    color:#dfdfdf;
+    color:#ebf0ee;
     font-size: 2rem;
 }
+
+.white_color {
+  color: white;
+}
+
 
 /* Form's CSS */
 
@@ -94,3 +99,132 @@ button:hover{
     background-color: rgb(6, 137, 245);
 }
 
+/* the table_list*
+.container-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f2f2f2;
+    padding: 40px 0;
+  }
+  
+  .content-wrapper {
+    max-width: 900px;
+  }
+  
+  .text-area {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  
+  #content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .table {
+    flex-basis: calc(33.33% - 20px);
+    margin-bottom: 20px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .table a {
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .table img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 10px;
+  }
+  
+  .table h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .table p {
+    font-size: 16px;
+    color: #777;
+  }
+  
+
+  /* CSS for table_detail.html */
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.table {
+  width: 400px;
+  padding: 20px;
+  background-color: #383636;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgb(0, 128, 43);
+};
+
+
+.home a {
+  display: inline-block;
+  color:  rgba(237, 240, 237, 0.829);
+  text-decoration: none;
+}
+
+.table-info {
+  margin-top: 20px;
+}
+
+.table-info h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.table-info p {
+  font-size: 14px;
+}
+
+#booking-form {
+  margin-top: 20px;
+}
+
+.input-div {
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="date"],
+input[type="time"] {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+button[type="submit"] {
+  padding: 8px 16px;
+  background-color: rgba(34, 180, 53, 0.2);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #45a049;
+}
