--- a/booking/templates/home_detail.html
+++ b/booking/templates/home_detail.html
@@ -1,18 +1,20 @@
+
+
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room Detail</title>
+    <title>{% block title %}{% endblock %}</title>
     <script src="https://kit.fontawesome.com/692189991f.js" crossorigin="anonymous"></script>
 
     <!-- Main StyleSheet -->
-    <link rel="stylesheet" href="{% static '/css/table_detail.css' %}">
-
+    <link rel="stylesheet" href="{% static 'css/table_detail.css' %}">
+    {% block extra_css %}{% endblock %}
 </head>
-
 <body>
 
     <!-- Main Content -->
@@ -23,17 +25,14 @@
 
             <!-- Div 1: Back to Home -->
             <div class="home">
-                <a href="{% url 'booking:TableListView' %}"><i class="fas fa-arrow-alt-circle-left"></i> Home</a>
+                <a href="{% url 'booking:TableListView' %}" class="white_color"><i class="fas fa-arrow-alt-circle-left "></i> Booking Home</a>
             </div>
             
 
             <!-- Div 2: Tablenformation -->
             <div class="table-info">
                 <h1>{{table_capacity}}</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id optio rem saepe culpa architecto tempora
-                    numquam debitis reiciendis! Quaerat laudantium consequuntur doloribus quod placeat consectetur
-                    veniam,
-                    rerum repellendus magnam labore. </p>
+                <h3 class="white_color">A high quality and comfortable table for every occassion </h3>
             </div>
 
             <!-- Div 3: Table Booking Form -->
@@ -64,3 +63,6 @@
 </body>
 
 </html>
+
+
+
