--- a/booking/templates/table_list.html
+++ b/booking/templates/table_list.html
@@ -1,57 +1,43 @@
+{% extends "base.html" %}
+
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Afrik Kitchen</title>
-  <!-- Main StyleSheet -->
-  <link rel="stylesheet" href="{% static '/css/table_list.css' %}" />
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/table_list.css' %}">
+{% endblock %}
 
-</head>
-
-<body>
-  <div class="container">
-    <!-- Navbar -->
-    <nav id="navbar">
-      <div class="brand">
-        <a href="https://www.darshandev.com">
-          <h1 id="logo">Afrik Kitchen</h1>
-        </a>
+{% block content %}
+<div class="container-wrapper">
+  <div class="table-img">
+    <img src="{% static 'images/afrik_logo.png' %}" alt="African Kitchen background" width="200" height="100">
+  </div>
+  <div class="content-wrapper main-column">
+    <div class="text-area content">
+      <!-- Title and about us sections -->
+      <h1 class="text-center green-heading  cursive-heading "><span>There are a lot of  capacittes of  Table to choose from</span></h1>
+      <h3 class="text-center green-heading  ">
+        Make your choice
+      </h3>
+      <div>
+        
+        <div class="container-wrapper1">
+          <!-- Main Content -->
+          <div id="content">
+            {% for table_capacity, table_url in table_list %}
+            <div class="table">
+              <a href="{{table_url}}">
+                <img src="https://res.cloudinary.com/daaluzzqp/image/upload/v1688646705/book_bgr_xjsh5m.jpg" />
+                <h2  class="green-heading" >{{table_capacity}} Table capacity</h2>
+                <p class="green-heading cursive-heading " >
+                  Very Comfortable Table. This can be in Garden, near the Window, or as You will like it.
+                </p>
+              </a>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
       </div>
-      <div id="ham-div" onclick="togglenav()">
-        <img id="ham" src="https://img.icons8.com/material-rounded/24/000000/menu.png" />
-      </div>
-
-    </nav>
-
-    <!-- Landing -->
-    <div class="landing">
-      <h1> <span>Welcome to Afrik Kitchen</span></h1>
-      <img src="https://www.pexels.com/photo/crop-man-demonstrating-plate-of-appetizing-grilled-sandwich-in-restaurant-5490920/" id="landing-img" alt="Best Kitchen in the World"  />
     </div>
-
-    <h2>Tables</h2>
-    <!-- Main Content -->
-    <div id="content">
-      {% for table_capacity, table_url in table_list %}
-      <div class="table">
-        <a href="{{table_url}}">
-          
-          <img
-            src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" />
-          
-            <h2>{{table_capacity}} Table capacity</h2>
-
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
-          </p>
-        </a>
-      </div>
-      {% endfor %}
-    </div>
-    <script src=""></script>
-</body>
-
-</html>
+  </div>
+</div>
+{% endblock %}
