--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% load static %}
-
+                          
 {% block content %}
 
 <div class="container-wrapper">
@@ -11,26 +11,23 @@
     <div class="content-wrapper main-column">
         <div class="text-area content">
             <!-- Title and about us sections -->
-            <h1 class="text-center">**Ndewo**<span>**Wilkommen**</span><span>**Welcome**</span><span>**Bonjour**</span>
+            <h1 class="text-center  green-heading cursive-heading "  >**Ndewo**<span>**Wilkommen**</span><span>**Welcome**</span><span>**Bonjour**</span>
             </h1>
             <div>
                 <p>
-                    Here at <span>Afrik Kitchen</span>, we speak the language of food. All our food ingredients are
-                    orgnic, that
-                    i can assure you.They are orginicall made or prepard with touch of proffessionlism.
+                    Here at <span class="green-heading cursive-heading">Afrik Kitchen</span>, we speak the language of food. All our food ingredients are
+                    orgnic, that i can assure you.They are organically made or prepard with touch of proffessionlism.
 
                 </p>
                 <p>
-                    If your are seeking where to relax, after a hectic work of the day, or you want to business or
-                    familiy lunch?
-                    or would like a home mande dinner with friends, or you are Dating out? Here @Afrik Kitchen is the
-                    right restaurant for
-                    every occasion
+                    If your are seeking where to relax, after a hectic work of the day, or you want to have business or
+                    familiy lunch? or where you would like a home made dinner with friends, or you are Dating out? Here @Afrik Kitchen is the
+                    right restaurant for  You as well as for every occasion.
                 </p>
 
 
                 <!-- Our Story Section -->
-                <section class="our-story">
+                <section class="our-story ">
                     <div class="container-wrapper">
                         <div class="row">
                             <div class="col-md-6">
@@ -40,16 +37,14 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="story-text">
-                                    <h2>Our Story</h2>
+                                    <h1 class="green-heading cursive-heading">Our Story</h1>
                                     <p> We have you, Families, and single in mind when preparing our meals.
                                         A healthy preparations in smaller portions is on the menu that youngsters will
                                         enjoy..
                                     </p>
-                                    <p> Here our staff are polite and friendly , minimal time spent in taking and
-                                        serving orders, and a relaxed restaurant
-                                        atmosphere are sure to leave a lasting impression on the minds of guests. A
-                                        happy and satisfied staff that is
-                                        high on morale is also more likely to have positive interactions with customers.
+                                    <p> Here our staff are polite ,friendly and equally happy  taking your Order abd serving You , minimal time spent in taking and
+                                        serving orders. We gurantee You of  relaxed atmosphere  with a soothing background music as you enjoy your meal . 
+                                        
                                         .</p>
                                 </div>
                             </div>
@@ -60,7 +55,7 @@
                 <!-- Menu Section -->
                 <section class="menu">
                     <div class="container-wrapper">
-                        <h2 class="text-center">Menu</h2>
+                        <h1 class="text-center green-heading cursive-heading">Menu</h1>
                         <div class="row">
                             <div class="col-md-3">
                                 <div class="menu-card">
@@ -107,12 +102,12 @@
                 <!-- Events Section -->
                 <section class="events">
                     <div class="container-wrapper">
-                        <h2 class="text-center">Events/Table Bookings</h2>
+                        <h1 class="text-center green-heading cursive-heading" >Events/Table Bookings</h1>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="event-card">
                                     <img src="{% static 'images/event_afrik.jpg' %}" alt="Event ennquiring/booking">
-                                    <h3>Contact Us for Your Events</h3>
+                                    <h3 class ="green-heading cursive-heading">Contact Us for Your Events</h3>
                                     <p>@ Afrik Kitchen, we are at best at organising events such as weddings, Birthdays,
                                         party,
                                         house warming party, churching, graduations party, compaies and school parties.
@@ -126,7 +121,7 @@
                             <div class="col-md-6">
                                 <div class="event-card">
                                     <img src="{% static 'images/event.jpg' %}" alt="Table booking">
-                                    <h3>Book Your Tables 2</h3>
+                                    <h3 class="green-heading cursive-heading">Book Your Table(s) </h3>
                                     <p>You can book tables for your dinner, Company's meeting, Dating out,
                                         familiy's meeting , lunck or dinner as case may be here.</p>
                                     <a href="{% url 'booking:TableListView' %}" class="btn btn-success">Book Table</a>      
@@ -142,7 +137,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="footer-card">
-                                    <h3>Afrik Kitchen</h3>
+                                    <h3 class="green-heading cursive-heading">Afrik Kitchen</h3>
                                     <p>14 Gronland Street Bremen<br>Bremen, State Germany<br>Phone: <a
                                             href="tel:+1234567890">123-456-7890</a></p>
                                 </div>
