--- a/TEMPLATES_DIR/includes/nav.html
+++ b/TEMPLATES_DIR/includes/nav.html
@@ -54,7 +54,7 @@
                             
                         {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'menus' %}">Menus</a>
+                            <a class="nav-link" aria-current="page" href="{% url 'home:home' %}">Menus</a>
                         </li>
                         {% endif %}
                         {% if user.is_authenticated %}
