--- a/booking/templates/booking/cancel_booking.html
+++ b/booking/templates/booking/cancel_booking.html
@@ -1,10 +1,5 @@
-{% extends 'menu/base.html' %}
-
-{% block content %}
-  <h2>Cancel Booking</h2>
-  <p>Are you sure you want to cancel the booking for {{ booking.customer_name }}?</p>
-  <form method="POST" action="{% url 'cancel_booking' booking.id %}">
-    {% csrf_token %}
-    <button type="submit">Cancel Booking</button>
-  </form>
-{% endblock %}
+<div class="cancel">
+    <a href="{% url 'booking:cancel_booking' booking.id %}">
+        <i class="far fa-2x fa-times-circle"></i> Cancel Booking
+    </a>
+</div>
