--- a/booking/templates/booking/edit_booking.html
+++ b/booking/templates/booking/edit_booking.html
@@ -1,10 +1,12 @@
-{% extends 'menu/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
   <h2>Edit Booking</h2>
+  <p>Are you sure you want to edit the booking for {{ booking.user }}?</p>
   <form method="POST" action="{% url 'edit_booking' booking.id %}">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Update Booking</button>
   </form>
 {% endblock %}
+
