--- a/booking/templates/booking_list.html
+++ b/booking/templates/booking_list.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Booking List</title>
     <script src="https://kit.fontawesome.com/692189991f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static '/css/booking_list.css' %}">
@@ -14,13 +16,13 @@
     <div class="content">
         <div class="header">
             <div class="headings">
-                <h1>Your Bookings</h1>
-                <h2>Welcome dear {{user}}</h2>
+                <h2 class=" green-heading cursive-heading ">Your Bookings</h2>
+                <h3 class=" green-heading cursive-heading ">Welcome dear {{user}}</h3>
             </div>
             <div class="home">
                 <!-- Div 1: Back to Home -->
                 <div class="home">
-                    <a href="{% url 'booking:TableListView' %}"><i class="fas fa-arrow-alt-circle-left"></i> Home</a>
+                    <a href="{% url 'booking:TableListView' %}"><i class="fas fa-arrow-alt-circle-left"></i> BookingHome</a>
                 </div>
             </div>
 
@@ -30,7 +32,7 @@
             {% for booking in booking_list %}
             <div class="booking">
                 <div class="category">
-                    <h2>{{booking.table.capacity}} Table capacities</h2>
+                    <h2>{{booking.get_table_capacity}} Table capacities</h2>
                 </div>
                 <div class="on">
                     <h3>On: {{booking.reservation_date}}</h3>
@@ -44,9 +46,10 @@
                 <div class="capacity">
                     <h3>wheelchair accessibilty: {{booking.table.wheelchair_accessible}}</h3>
                 </div>
-                <div class="cancel"><a href="{{booking.get_cancel_booking_url}}" class="invisible"><i
-                            class="far fa-2x fa-times-circle"></i> Cancel Booking</a></div>
-
+                <!-- <div class="cancel"><a href="{% url 'booking:cancel_booking' booking.id %}"><i class="far fa-2x fa-times-circle"></i></a></div> -->
+                <div class="delete"><a href="{% url 'booking:delete_booking' booking.id %}"><i class="far fa-2x fa-times-circle"></i> Cancel Booking</a></div>
+                <div class="edit_booking_form"><a href="{% url 'booking:edit_booking' booking.id %}"><i class="far fa-2x fa-edit"></i> Edit Booking</a></div>
+                
             </div>
             {% endfor %}
         </div>
@@ -54,3 +57,5 @@
 </body>
 
 </html>
+
+
