--- a/view_menu/templates/menu/create_menu.html
+++ b/view_menu/templates/menu/create_menu.html
@@ -1,14 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Create Menu</title>
-</head>
-<body>
-    <h1>Create Menu</h1>
-    <form method="POST">
+{% extends 'base.html' %}
+
+{% block content %}
+
+    <h1 class=" text-center green-heading cursive-heading" >Create Menu</h1>
+    <form method="POST" action="{% url 'view_menu:create_menu' %}">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Create</button>
+        <button type="submit" class="btn-success">Create Menu</button>
     </form>
-</body>
-</html>
+
+{% endblock %}
+
+
+
+
+
+
+
