--- a/view_menu/templates/menu/success.html
+++ b/view_menu/templates/menu/success.html
@@ -1,2 +1,3 @@
 <h2>Menu created successfully!</h2>
 <p>Thank you for creating the {{ menu_type }} menu.</p>
+<p>Return to the <a href="{% url 'home:home' %}">Home page</a></p>
