--- a/view_menu/templates/menu/side.html
+++ b/view_menu/templates/menu/side.html
@@ -21,20 +21,27 @@
                             <h4 class="card-title" >{{ side.name }}</h4>
                             <p class="card-text">{{ side.description }}</p>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" checked>
+                                <input class="form-check-input" type="checkbox" checked>
                                 <label class="form-check-label">{{ side.priceM }} $</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio">
+                                <input class="form-check-input" type="checkbox">
                                 <label class="form-check-label">{{ side.priceL }} $</label>
                             </div>
-                            <button class="btn btn-warning mt-3">Add to Cart</button>
-                        </div>
+                            <button class="btn btn-success mt-3"><a style="color: white;text-decoration: none;"
+                                href="{% url 'view_menu:page_not_found' %}">Add to Cart</a></button>
                     </div>
                 </div>
-                {% endfor %}
             </div>
+            {% endfor %}
         </div>
+        <button>
+            <h3 class="text-center btn btn-success mt-3">
+                <a style="color: white;text-decoration: none;" href="tel: +491 876 654 34 "> Call us @ +49 145 265
+                    643</a>
+                For your bookings
+            </h3>
+        </button>
     </div>
 </div>
 {% endblock %}
