--- a/TEMPLATES_DIR/includes/nav.html
+++ b/TEMPLATES_DIR/includes/nav.html
@@ -83,8 +83,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Your custom JavaScript files -->
-    <script src="{% static '/cs/script.js' %}"></script>
-    <script src="{% static '/js/order.js' %}"></script>
+    <script src="{% static '/js/script.js' %}"></script>
+    <!-- <script src="{% static '/js/order.js' %}"></script> -->
 </body>
 
 </html>
