--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -135,40 +135,30 @@
                 </div>
             </section>
 
-            <!-- Footer Section -->
             <footer class="footer">
-                <div class="container">
+                <div class="container-wrapper">
                     <div class="row">
-                        <div class="col-md-4">
-                            <div class="footer-card">
-                                <h3 class="green-heading cursive-heading">Afrik Kitchen</h3>
-                                <p>14 Gronland Street Bremen<br>Bremen, State Germany<br>Phone: <a
-                                        href="tel:+1234567890">123-456-7890</a></p>
+                        <div class="col-md">
+                            <div class="event-card">
+                                <h4 class="green-heading cursive-heading">The location of our restaurant</h4>
+                                <img src="{% static 'images/map_location.jpg' %}" alt="Event ennquiring/booking">
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="footer-card">
-                                <h3>Google Map</h3>
-                                <div class="mapouter">
-                                    <div class="gmap_canvas">
-                                        <iframe id="gmap_canvas"
-                                            src="https://maps.google.com/maps?q=torr%20head&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="footer-card">
-                                <h3>Opening Hours</h3>
-                                <ul>
-                                    <li>Monday to Saturday: 7.00am - 10.45pm</li>
+                        <div class="col-md-6">
+                            <div class="event-card">
+                                <h3 class="green-heading cursive-heading">Our Office Hours </h3>
+                                <ul class="no-decoration">
+                                    <li>Monday to Friday: 7.00am - 10.45pm</li>
+                                    <li>Saturdays: 9.45 - 130pm</li>
                                     <li>Holidays: 10pm - 4pm</li>
                                     <li>Sundays: closed</li>
                                 </ul>
+                                <p>14 Gronland Street Bremen<br>Bremen, State Germany<br>Phone: <a href="tel:+1234567890">123-456-7890</a></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </footer>
-
+            
+            
             {% endblock %}
