Modify NAV html so that only staff can creat_menu

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -58,7 +58,7 @@
             </section>
 
             <!-- Menu Section -->
-            <section class="menu">
+            <section class="menu  scroll-to-menu" id="menu">
                 <div class="container-wrapper">
                     <h1 class="text-center green-heading cursive-heading">Menu</h1>
                     <div class="row justify-content-center">
