--- a/TEMPLATES_DIR/includes/nav.html
+++ b/TEMPLATES_DIR/includes/nav.html
@@ -31,27 +31,36 @@
                                 Bookings
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" aria-current="page" href="{% url 'booking:managebookings' %}">Manage Bookings</a></li>
-                                <li><a class="dropdown-item" aria-current="page" href="{% url 'booking:TableListView' %}">New Booking</a></li>                       
+                                <li><a class="dropdown-item" aria-current="page"
+                                        href="{% url 'booking:managebookings' %}">Manage Bookings</a></li>
+                                <li><a class="dropdown-item" aria-current="page"
+                                        href="{% url 'booking:TableListView' %}">New Booking</a></li>
                             </ul>
                         </li>
                         <!-- Show menu drop downs to staff -->
-                        {% if user.is_staff %}
+                        {% if user.is_authenticated %}          
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="staffOptions" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle scroll-to-menu" href="#menu" id="staffOptions"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Menus
                             </a>
+
                             <ul class="dropdown-menu" aria-labelledby="staffOptions">
-                                <li><a class="dropdown-item" aria-current="page" href="{% url 'view_menu:breakfast' %}">Breakfast</a></li>
-                                <li><a class="dropdown-item" aria-current="page" href="{% url 'view_menu:lunch' %}">Lunch</a></li>
-                                <li><a class="dropdown-item" aria-current="page" href="{% url 'view_menu:dinner' %}">Dinner</a></li>
-                                <li><a class="dropdown-item" aria-current="page" href="{% url 'view_menu:side' %}">Sides</a></li>
-                                <li><a class="dropdown-item" aria-current="page" href="{% url 'view_menu:create_menu' %}">Create Menu</a></li>                         
+                                <li><a class="dropdown-item" aria-current="page"
+                                        href="{% url 'view_menu:breakfast' %}">Breakfast</a></li>
+                                <li><a class="dropdown-item" aria-current="page"
+                                        href="{% url 'view_menu:lunch' %}">Lunch</a></li>
+                                <li><a class="dropdown-item" aria-current="page"
+                                        href="{% url 'view_menu:dinner' %}">Dinner</a></li>
+                                <li><a class="dropdown-item" aria-current="page"
+                                        href="{% url 'view_menu:side' %}">Sides</a></li>
+
+                                    {% if user.is_staff %}   
+                                         <li><a class="dropdown-item" aria-current="page"
+                                        href="{% url 'view_menu:create_menu' %}">Create Menu</a></li>
+                                    {% endif %}
                             </ul>
                         </li>
-                        
-                            
                         {% else %}
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{% url 'home:home' %}">Menus</a>
@@ -81,6 +90,21 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
+
+    <script>
+        function scrollToMenu() {
+            var menuSection = document.getElementById("menu");
+            menuSection.scrollIntoView({
+                behavior: "smooth"
+            });
+        }
+
+        var scrollButton = document.querySelector(".scroll-to-menu");
+        scrollButton.addEventListener("click", scrollToMenu);
+    </script>
+
+
 
     <!-- Your custom JavaScript files -->
     <script src="{% static '/js/script.js' %}"></script>
