second deploymnet commit

--- a/booking/templates/booking/booking_confirm_delete.html
+++ b/booking/templates/booking/booking_confirm_delete.html
@@ -21,7 +21,7 @@
   <!-- Main Content -->
   <div class="content">
 
-    <!-- Room Details -->
+    <!--Table Details -->
     <div class="table">
 
       <!-- Div 1: Back to Home -->
