--- a/booking/templates/booking/booking_cancel_view.html
+++ b/booking/templates/booking/booking_cancel_view.html
@@ -19,7 +19,7 @@
   <!-- Main Content -->
   <div class="content">
 
-    <!-- Room Details -->
+    <!--Table Details -->
     <div class="table">
 
       <!-- Div 1: Back to Home -->
